server/config/k8s_notworking/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  namespace: spi-scm
  name: spi-scm-file-retriever-server-ingress
spec:
  rules:
    - host: "scm.minikube.ip.nip.io"
      http:
        paths:
          - backend:
              service:
                name: spi-scm-file-retriever-server-service
                port:
                  number: 8000
            pathType: ImplementationSpecific
